--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,210 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;1,400&family=Playfair+Display:wght@400;600&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face{
+  font-family: 'FuturaPT';
+  src: url('../src/assets/FuturaPTBook.otf');
+}
+@font-face{
+  font-family: 'FuturaPTBold';
+  src: url('../src/assets/FuturaPTHeavy.otf');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
+html,
+body,
+#root,
+.app {
+  height: 100%;
+  background-color: #090909;
+  @apply text-white;
+  
 }
+
+.card{
+  position: relative;
+  width: 200px;
+  height: 200px;
+  background: transparent;
+  box-shadow: inset 20px 20px 20px rgba(0,0,0,0.05),
+  5px 25px 20px rgba(0,0,0,0.05),
+  5px 20px 30px rgba(0,0,0,0.05),
+  inset -20px -20px 25px rgba(255,255,255,0.09);
+  border-radius: 50% ;
+  transition: 0.5s ease-in-out;
+  animation: pulse 4s infinite ease-in-out;
+}
+
+.card::before{
+content:'';
+position: absolute;
+left: 140px;
+top: 40px;
+width: 25px;
+height: 25px;
+background: rgba(255,255,255,0.02);
+border-radius: 50% ;
+transition: 0.5s ease-in-out;
+opacity: 0.9;
+animation: pulse2 2s infinite ease-in-out;
+}
+
+.card::after{
+content:'';
+position: absolute;
+left: 150px;
+top: 70px;
+width: 12px;
+height: 12px;
+background: rgba(255,255,255,0.02);
+border-radius: 50% ;
+opacity: 0.9;
+animation: pulse3 2s infinite ease-in-out;
+}
+
+.card:hover{
+  border-radius: 50%;
+}
+.card:hover::before{
+  border-radius: 50% ;
+  transform: translateY(5px);
+ 
+  }
+
+  @keyframes pulse{
+    0%{
+      border-radius: 50%;
+    }
+    50%{
+      border-radius: 42% 58% 47% 53% / 35% 59% 41% 65% ;
+    }
+    100%{
+      border-radius: 50%;
+    }
+
+  }
+  @keyframes pulse2{
+    0%{
+      border-radius: 50%;
+    }
+    50%{
+      border-radius: 49% 51% 43% 57% / 42% 53% 47% 58% ;
+      transform: translateY(5px);
+    }
+    100%{
+      border-radius: 50%;
+    }
+  }
+  @keyframes pulse3{
+    0%{
+      border-radius: 50%;
+    }
+    50%{
+      border-radius: 26% 74% 46% 54% / 9% 73% 27% 91%;
+      transform: translateY(5px);
+    }
+    100%{
+      border-radius: 50%;
+    }
+  }
+
+
+
+
+  /* projects */
+  .item {
+    position: relative;    
+    overflow: hidden;
+  }
+
+  .item::after{
+    content: '';
+    position: absolute;
+    display: block;
+    background: #e5540a;
+    opacity: 0.9;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(2) translateX(-100%) translateY(-100%) rotate(-28deg);
+    transition: 3s cubic-bezier(0.2, 1, 0.3, 1);
+  }
+
+  .item:hover::after{
+    transform: scale(2) translateX(0) translateY(0) rotate(-28deg);
+  }
+
+  .item-image {
+    height: auto;
+    transform: translateZ(0);
+    display: block;
+    transition: transform 750ms cubic-bezier(0.2, 1, 0.3, 1);
+  }
+
+  .item:hover > .item-image{
+    transform: scale(1.2);
+  }
+
+
+ 
+
+
+  .item-text {
+    position: absolute;
+
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    text-align: center;
+    z-index: 10;
+    color: white;
+    transform: translateY(-20%);
+    transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1),
+      transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
+    transition-delay: 300ms;
+  }
+
+  .item-text-wrap {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-50%);
+  }
+
+  .item-text-num {
+    font-size: 1.4rem;
+    padding: 0 1rem;
+    margin: 5px 0 0 0;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    width: 250px;
+    text-align: center;
+  }
+
+  .item-text-title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.item:hover > .item-text {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  a:hover{
+    color: #090909;
+    transition: 0.3s ease-in;
+    transform: scale(1.02);
+  }
